# LCM-Sandbox

./: .gitignore  AGENT-INSTRUCTIONS.md  CHANGELOG.md  HERMES-PERSONA-INTEGRATION-PLAN.md  IMPLEMENTATION-PLAN.md  PLAN-REMAINING-WORK.md  README.md  SANDBOX-AGENT-CONFIG.html  SANDBOX-AGENT-CONFIG.md  SANDBOX-ARCHITECTURE.md  SANDBOX-CONTROL-PLANE.html  SANDBOX-CONTROL-SCHEMA.md  SANDBOX-DETAILED-FLOW.md  SANDBOX-FLOWS.html  SANDBOX-IMAGE-TOOLCHAIN.md  SANDBOX-ORCHESTRATION.html  SANDBOX-ORCHESTRATION.md  SESSION-HANDOFF.md  TROUBLESHOOTING.md  USAGE.md  pyproject.toml
.claude/: settings.json
docs/: PHASE-5-PREREQS-VERIFICATION.md  REPO-TOPOLOGY.md
lcm_sandbox/: __init__.py  cli.py  cli_emit.py  exceptions.py
lcm_sandbox/commands/: __init__.py  create.py  scaffold.py
lcm_sandbox/core/: __init__.py  artifact_capture.py  control_plane.py  docker_builder.py  docker_launcher.py  preflight.py  sync.py  worktree.py
lcm_sandbox/models/: __init__.py  artifact.py  sandbox_config.py
lcm_sandbox/persona/: __init__.py  capturer.py  cli.py  renderer.py
lcm_sandbox/tests/: __init__.py  conftest.py  test_apply_agent_profile.py  test_artifact_capture.py  test_control_plane.py  test_docker_builder.py  test_docker_git_hooks.py  test_docker_launcher.py  test_models.py  test_persona_render_capture.py  (+6 more)
scripts/: Dockerfile.dev-sandbox  Dockerfile.hermes  README-dev-sandbox.md  apply_agent_profile.py  build-hermes-image.sh  docker-git-hooks.sh  entrypoint.sh  rm-shim.sh  run-dev-sandbox.sh  setup-dev-sandbox.sh  smoke-test.sh  stop-dev-sandbox.sh  verify-dev-sandbox.sh
(+7 files in other folders)
